--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  connectivity_plus: ^4.0.1
-  dio: ^4.0.6
+  connectivity_plus: ^6.1.4
+  dio: ^5.8.0+1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -23,5 +23,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 flutter:
